# rym2spotify

./: .gitignore  README.md  main.py  pyproject.toml  run.py
frontend/: index.html  styles.css
src/: parse_html.py  scrape.py
