[project]
name = "rym2spotify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "lxml>=5.4.0",
    "selenium>=4.33.0",
    "undetected-chromedriver>=3.5.5",
    "webdriver-manager>=4.0.2",
]
